nb-study/security.tf
resource "aws_security_group" "nb-study-web-instance" {
  name        = "nb-study-web-instance"
  vpc_id      = aws_vpc.nb-study.id

  ingress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "nb-study-web-instance"
  }
}

resource "aws_security_group" "nb-study-alb" {
  name        = "nb-study-alb"
  vpc_id      = aws_vpc.nb-study.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "nb-study-alb"
  }
}
